--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^8.3.0",
+    "@react-native-firebase/ml-vision": "^7.3.1",
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-device-info": "^5.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
